# bacteria_project

Project_18/: CMakeLists.txt
Project_18/include/: particle.h
Project_18/python/: particle.pyd  test_particle.py
Project_18/src/: particle_binding.cpp
final_version/: abstract.txt  func.hs
final_version/include/: kdtree.h  map.h  matrixParticle.h  nutritionParticle.h
final_version/python/: current_particles.pl  particle_rules.pl  test_final.py
final_version/src/: bacteria.cpp  binding1.cpp  kdtree.cpp  map.cpp  nutritionParticle.cpp
my_project_18/: bacteria.cpp  bacteria.h  main.cpp  map.cpp  map.h  matrixParticle.h  nutritionParticle.cpp  nutritionParticle.h
my_project_18/include/: particle.h
my_project_18/python/: particle.pyd  test_particle.py
my_project_18/src/: particle_binding.cpp
test_library/python/: test_particle.py
test_library/src/: particle_binding.cpp
